CHANGES-1.6.txt
---------------

CHANGES IN CUPS V1.6.4

	- The IPP backend did not add the "last-document" attribute
	  (<rdar://problem/114660379>)
	- Added a SyncOnClose directive to cups-files.conf to force cupsd to
	  call fsync before closing any configuration/state files it writes
	  (<rdar://problem/14523043>)
	- Added USB quirk rule for Lexmark E238 (<rdar://problem/14493054>)
	- Closed server connections were still not always detected
	  (<rdar://problem/14484313>)
	- The libusb-based USB backend now loads its list of quirks from files
	  in /usr/share/cups/usb instead of using a hardcoded table
	  (<rdar://problem/14442769>)
	- The scheduler did not properly register ICC color profiles with
	  colord (<rdar://problem/14455625>)


CHANGES IN CUPS V1.6.3

	- The configure script now prefers Clang over GCC.
	- Fixed a compile problem on AIX (STR #4307)
	- The default IPP version did not always get set before creating a new
	  IPP request message (<rdar://problem/14401718>)
	- The lp, lpq, lpr, and lpstat now display an error message advising the
	  use of the /version=1.1 ServerName option (<rdar://problem/14290628>)
	- Added documentation about the /version=1.1 option to ServerName in
	  client.conf (<rdar://problem/14216262>)
	- httpStatus(HTTP_ERROR) did not return a useful error message
	  (<rdar://problem/14217326>)
	- The lp, lpq, lpr, and lpstat commands incorrectly ignored the default
	  printer set in the lpoptions file (<rdar://problem/14216472>)
	- Fixed a URI encoding issue for hostnames containing the ` (backquote)
	  character (<rdar://problem/14243133>)
	- Added support for RFC 6874's IPv6 link local address format in URIs
	  (<rdar://problem/13979453>)
	- The USB backend could crash on libusb-based systems if USB was
	  disabled in the BIOS (<rdar://problem/13875729>)
	- Fixed a rounding error in the PWG media size mapping code
	  (<rdar://problem/13493241>)
	- Fixed several ipptool test files that used old STATUS names.